added activate level function

--- a/levels/1/level.yaml
+++ b/levels/1/level.yaml
@@ -3,3 +3,6 @@ checks:
   - name: containerStatus
     cmd: k get pods/nginx -o=jsonpath='{.status.containerStatuses[0].ready}'
     value: true
+  - name: containerStatus
+    cmd: k get pods/nginx -o=jsonpath='{.status.containerStatuses[0].ready}'
+    value: true
