--- a/levels/1/resources/pod.yaml
+++ b/levels/1/resources/pod.yaml
@@ -1,13 +1,12 @@
-resource:
-  apiVersion: v1
-  kind: Pod
-  metadata:
-    labels:
-      run: nginx
+apiVersion: v1
+kind: Pod
+metadata:
+  labels:
+    level: "1"
+  name: nginx
+spec:
+  containers:
+  - image: nginx3
     name: nginx
-  spec:
-    containers:
-    - image: nginx3
-      name: nginx
-    dnsPolicy: ClusterFirst
-    restartPolicy: Never
+  dnsPolicy: ClusterFirst
+  restartPolicy: Never
